2020-10-20

        * Version 2.0.0 released
        ========================

        Implement sparse vector response cache (#3403)
        Implement GMatrixSparse::row() and GMatrixSparse::add_to_row() methods
        Integrate analytical gradients for energy dispersion computation (#3333)
        Add GFunctions abstract base class (#3328)
        Add GIntegrals class (#3328)
        Implement vectorised response computation (#3203)
        Implement analytical gradients for the radial Gaussian model in a
          stacked analysis (#3203)


2020-09-07

        * Bug fix version 1.7.1 released
        ================================

        Add Python include path in search for Python.h (#3329)
        Test for Big Sur in configuration step (#3326)
        Copy Python modules into pyext/gammalib folder (#3322)
        Write units of response cubes into FITS files (#3321)
        Implement specific response cache for CTA stacked analysis (#3316)
        Speed up model definition XML file writing (#3308)
        Fix automatic type casting in Python interface (#3295)
        Make parameter file reading and writing thread safe (#3287)
        Add quotes to sky region names (#3280)
        Fix broken power law flux and eflux computation bug (#3279)


2020-07-02

        * Version 1.7.0 released
        ========================

        Add equality and non-equality operators to GSkyRegionCircle class
        Add GModelSpatialRadialRing class (#3253)
        Fix ambiguity problem in GSkyDir::posang() and posang_deg() (#3199)
        Fix GModelSpatialDiffuseCube pickeling issue (#3179)
        Rename GModelSpatialDiffuseCube::set_mc_cone() to mc_cone() (#3179)
        Rename GModelSpatialDiffuseMap::set_mc_cone() to mc_cone() (#3179)
        Properly set region for GModelSpatialDiffuseCube class (#3145)
        Avoid rounding errors in GSkyMap operators (#3126)
        Fix inverted min-max boundary in GOptimizePar for negative scale factors (#3072)