@@ -1,4 +1,4 @@
-2020-10-20
+2020-10-21
 
         * Version 2.0.0 released
         ========================
@@ -11,6 +11,7 @@
         Implement vectorised response computation (#3203)
         Implement analytical gradients for the radial Gaussian model in a
           stacked analysis (#3203)
+        Implement pre-computation cache in GModelSpatialGauss (#1300)
 
 
 2020-09-07
